Moved & tidied some things, replaced raw instantiation with a factory, removed the recently added TODOs.